They will be replaced by the maven modules of the new architecture used by `sirius-web`.
The removal of those deprecated modules will occur during the iteration 2024.9.0.


=== Breaking changes

- https://github.com/eclipse-sirius/sirius-web/issues/3271[#3271] [test] Move `IGraphQLRequestor` to `org.eclipse.sirius.components.graphql.tests.api`.


=== Dependency update


=== Bug fixes


=== New Features

- https://github.com/eclipse-sirius/sirius-web/issues/3271[#3271] [test] Factorize GraphQL queries used in tests.
4 new projects have been created to store GraphQL queries, mutations, and subscription runners: `sirius-components-graphql-tests`, `sirius-components-trees-tests`, `sirius-components-portals-tests`, `sirius-web-tests`.
`sirius-components-forms-tests` and `sirius-components-diagrams-tests` now both contain GraphQL queries related to forms and diagrams.
- https://github.com/eclipse-sirius/sirius-web/issues/3236[#3236] [view] Add a new expression in `NodeDescription` to specify whether a node is collapsed by default.
- https://github.com/eclipse-sirius/sirius-web/issues/3236[#3236] [diagram] Add a new predicate in `NodeDescription` to specify whether a node is collapsed by default.


=== Improvements

- https://github.com/eclipse-sirius/sirius-web/issues/3279[#3279] Improve the new architecture to reach feature partity with the old one


== v2024.3.0

=== Shapes

- Transform Sirius Web into an extensible platform
- Facilitate the insertion of elements into a list node
- Add support to filter elements on a diagram
- Add filters on the explorer view

=== Architectural decision records

- [ADR-126] Add the ability to reuse both the Sirius Web frontend and backend easily
- [ADR-127] Add the ability to extend the Sirius Web frontend
- [ADR-128] Add the ability to extend the Sirius Web backend
- [ADR-129] Add support for confirmation dialogs
- [ADR-130] Add support for outside and inside node labels
- [ADR-131] Add more filtering capabilities on diagram