@@ -34,6 +34,8 @@ The removal of those deprecated modules will occur during the iteration 2024.9.0
 
 === Bug fixes
 
+- https://github.com/eclipse-sirius/sirius-web/issues/3183[#3183] [diagram] Fix an issue in which an edge between a child and its parent passed entirely through the child.
+
 
 === New Features
 
